<resources>
    <string name="app_name">NoteAppFirestore</string>
    <string name="add_note">add note</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="weekend_talk_series">Weekend Talk Series</string>
    <string name="title">Title</string>
    <string name="description_add">Description</string>
    <string name="save">Save</string>
    <string name="loading">Loading...</string>
    <string name="edit">Edit</string>
    <string name="created_april_11_2021">Created April 11, 2021</string>
    <string name="my_note">My Note</string>
</resources>